# agent-evaluator

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
examples/: __init__.py  run_gaia.py
src/agents/: __init__.py  agent.py  analyzer.py  base.py  browser.py  factory.py  general.py  planning.py  researcher.py
src/config/: loader.py
src/configs/: config_gaia.yaml
src/core/: logger.py  memory.py  models.py  registry.py
src/gaia/: __init__.py  answer_processor.py  dataset.py  evaluator.py  monitor.py
src/pipeline/: __init__.py  runner.py
src/tools/: __init__.py  default_tools.py  final_answer.py  planning_tool.py  python_interpreter.py  web_fetcher.py
src/utils/: __init__.py  config_loader.py
